fix text spacing

--- a/css/about.css
+++ b/css/about.css
@@ -1,9 +1,3 @@
-.icon {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-}
-
 .search-icon {
     width: 20px;
     height: 20px;
